legacy/kubernetes/services/nextcloud/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    name: nextcloud
